--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <body>
     <img src="image/car.jpg"><br>
     <div id="app">
-      <label>Premier nombre</label><input id="a" value="2"><br>
-      <label>Second Nombre</label><input id="b" value="3"><br>
-      <div id="r"></div>
+      <label>Add</label><input id="a" value="2"><br>
+      <label>To</label><input id="b" value="3"><br>
+      Result:<div id="r"></div>
     </div>
     <img src="https://picsum.photos/800/100">
     <script type="module" src="/main.js"></script>
