--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <label>Add</label><input id="a" value="2"><br>
       <label>To</label><input id="b" value="3"><br>
-      Result:<div id="r"></div>
+      Result:&nbsp;<span id="r"></span>
     </div>
     <img src="https://picsum.photos/800/100">
     <script type="module" src="/main.js"></script>
