--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Vite Application</title>
   </head>
   <body>
-    <img src="image/car.jpg"><br>
+    <img src="images/car.jpg"><br>
     <div id="app">
       <label>Add</label><input id="a" value="2"><br>
       <label>To</label><input id="b" value="3"><br>
