--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
       Result:&nbsp;<span id="r"></span>
     </div>
     <img src="https://picsum.photos/800/100">
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
