--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
       <label>To</label><input id="b" value="3"><br>
       Result:&nbsp;<span id="r"></span>
     </div>
-    <img src="https://picsum.photos/800/100">
+    <img src="https://picsum.photos/800/50">
+    <p>Build no:<span id="buildNo"></span></p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
