--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,25 @@
     <title>Vite Application</title>
   </head>
   <body>
-    <img src="images/car.jpg"><br>
-    <div id="app">
-      <label>Add</label><input id="a" value="2"><br>
-      <label>To</label><input id="b" value="3"><br>
-      Result:&nbsp;<span id="r"></span>
+    <div class="toolbar">
+      <button id="btSave">Save</button>
+      <button id="btOpen">Open</button>
+      <button id="btReset">Reset</button>
+      <button id="btMode">Mode</button>
     </div>
-    <img src="https://picsum.photos/800/50">
-    <p>Build no:<span id="buildNo"></span></p>
+    
+    <div id="tabsContainer">
+      <ul>
+        <li><a href="#tabs-1">Image Un</a></li>
+        <li><a href="#tabs-2">Image Deux</a></li>
+      </ul>
+      <div id="tabs-1">
+        <img src="https://picsum.photos/800/450?random=1">
+      </div>
+      <div id="tabs-2">
+        <img src="https://picsum.photos/800/450?random=2">
+      </div>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
